Fix height sizing. No more overflow

--- a/app/static/css/theme/editor/_main.scss
+++ b/app/static/css/theme/editor/_main.scss
@@ -1,6 +1,6 @@
 editor-page-container{
 	display:flex;
-	height:100vh;
+	height:100%;
 	width:100%;
 	aside{
 		width:245px;
